<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_training">

    <fragment
        android:id="@+id/nav_training"
        android:name="com.example.fujiapp.ui.training.TrainingFragment"
        android:label="@string/menu_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.fujiapp.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.fujiapp.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
</navigation>